[gd_scene load_steps=7 format=3 uid="uid://bao4o77d7qwgv"]

[ext_resource type="Script" path="res://scripts/card.gd" id="1_mfsqv"]
[ext_resource type="Texture2D" uid="uid://cbqhwdx4upbtb" path="res://images/CARD_BG.png" id="1_wy2dc"]
[ext_resource type="Resource" uid="uid://ctjjfrlsce0ij" path="res://data/cards/CardTest.tres" id="3_ejb6n"]
[ext_resource type="Texture2D" uid="uid://cbppwqnm5t3o" path="res://images/SecondImg.png" id="3_kwccp"]
[ext_resource type="LabelSettings" uid="uid://digxmf2ijvelx" path="res://data/CardDescSettings.tres" id="4_j5nlx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e3asl"]
size = Vector2(170, 290)

[node name="Card" type="Sprite2D"]
texture = ExtResource("1_wy2dc")
script = ExtResource("1_mfsqv")
cardData = ExtResource("3_ejb6n")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(0, -86)
texture = ExtResource("3_kwccp")

[node name="Label" type="Label" parent="."]
offset_left = -76.0
offset_top = -30.0
offset_right = 76.0
offset_bottom = 136.0
text = "This is a test text"
label_settings = ExtResource("4_j5nlx")
autowrap_mode = 3

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_e3asl")

[connection signal="input_event" from="Area2D" to="." method="_on_input"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exit"]
